# dart-native-web-serial-port

./: .packages  README.md  pubspec.yaml
.dart_tool/: package_config.json
lib/: BiiiSerial.dart  main.dart
lib/assets/: biii_in_webserial.js
lib/src/: Unsupported.dart
lib/src/native/: Native.dart  NativeFFI.dart
lib/src/native/c/: CMakeLists.txt  biiiserial.c  biiiserial.def  biiiserial.h
lib/src/web/: Web.dart
